// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostText - Snapshots > matches snapshot for article showing full content on post page 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <h1
    class="text-2xl leading-8 font-bold text-white"
  >
    Article Title
  </h1>
  

  <p>
    This is the introduction paragraph.
  </p>
  

  <h2
    class="text-xl leading-7 font-bold text-white"
  >
    Section
  </h2>
  

  <p>
    More content here.
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for article showing only first paragraph in feed 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is the introduction paragraph.
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for article with h1 heading 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <h1
    class="text-2xl leading-8 font-bold text-white"
  >
    Main Title
  </h1>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for article with long content (first paragraph extracted and truncated in feed) 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse... 
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for article with multiple headings (first paragraph extracted in feed) 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Some introductory text here.
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for autolinked URL 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://example.com
    </a>
     for more
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for autolinked URL with path and query 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="https://example.com/path?query=value"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://example.com/path?query=value
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for blockquote 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <blockquote
    class="border-l-4 border-foreground pl-4 whitespace-normal"
  >
    

    <p>
      This is a quoted message
    </p>
    

  </blockquote>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for bold and italic combination 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <strong>
      <em>
        bold and italic
      </em>
    </strong>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for bold and italic text 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <strong>
      bold
    </strong>
     and 
    <em>
      italic
    </em>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for code block 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <pre>
    <code
      class="language-javascript"
      data-testid="post-code-block"
    >
      const greeting = "Hello";
console.log(greeting);

    </code>
  </pre>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for code block without language 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <pre>
    <code
      class="language-plaintext"
      data-testid="post-code-block"
    >
      plain code block

    </code>
  </pre>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for combined markdown elements 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  Welcome
  

  <p>
    This is 
    <strong>
      bold
    </strong>
     and 
    <em>
      italic
    </em>
     text with a link 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://example.com
    </a>
     here.
  </p>
  

  <blockquote
    class="border-l-4 border-foreground pl-4 whitespace-normal"
  >
    

    <p>
      A meaningful quote
    </p>
    

  </blockquote>
  

  <ul
    class="list-inside list-disc whitespace-normal"
  >
    

    <li>
      Item one
    </li>
    

    <li>
      Item two
    </li>
    

  </ul>
  

  <pre>
    <code
      class="language-js"
      data-testid="post-code-block"
    >
      const x = 42;

    </code>
  </pre>
  

  <p>
    Use 
    <code
      data-testid="post-code-block"
    >
      inline code
    </code>
     for variables.
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for content with special characters 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Special chars: &lt;&gt;&"' and emoji: 🎉🚀
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for deceptive link converted to plaintext 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Visit 
    [facebook.com](https://badsite.com)
     now
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for email autolink 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Contact 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="mailto:user@example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      user@example.com
    </a>
     for help
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for empty content 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
/>
`;

exports[`PostText - Snapshots > matches snapshot for hashtag alongside autolink 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Visit 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://example.com
    </a>
     and follow 
    <a
      data-testid="post-hashtag"
      href="/search?tags=trending"
    >
      #trending
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for hashtag with hyphens 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      data-testid="post-hashtag"
      href="/search?tags=hello-world"
    >
      #hello-world
    </a>
     tag
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for hashtag with markdown formatting 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <strong>
      bold
    </strong>
     with 
    <a
      data-testid="post-hashtag"
      href="/search?tags=hashtag"
    >
      #hashtag
    </a>
     and 
    <em>
      italic
    </em>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for hashtag with mixed hyphens and underscores 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      data-testid="post-hashtag"
      href="/search?tags=hello-world_test-example"
    >
      #hello-world_test-example
    </a>
     tag
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for hashtag with text 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This post is about 
    <a
      data-testid="post-hashtag"
      href="/search?tags=crypto"
    >
      #crypto
    </a>
     and 
    <a
      data-testid="post-hashtag"
      href="/search?tags=blockchain"
    >
      #blockchain
    </a>
     technology
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for hashtag with underscores 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      data-testid="post-hashtag"
      href="/search?tags=hello_world"
    >
      #hello_world
    </a>
     tag
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for horizontal rule 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Above the line
  </p>
  

  <hr />
  

  <p>
    Below the line
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for inline code 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Use 
    <code
      data-testid="post-code-block"
    >
      console.log()
    </code>
     for debugging
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for italic and bold combination 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <em>
      <strong>
        italic and bold
      </strong>
    </em>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for italic and strikethrough combination 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <em>
      <del>
        italic and strikethrough
      </del>
    </em>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for long hashtag 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out this 
    <a
      data-testid="post-hashtag"
      href="/search?tags=verylooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooonghashtagwithlotsofcharactersandnumbers123456789"
    >
      #verylooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooonghashtagwithlotsofcharactersandnumbers123456789
    </a>
     tag
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for markdown link converted to plaintext 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    [Example](https://example.com)
     for more
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for mention alongside autolink 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check pk:o1gg96ewuojmopcjbz8895478wench6tjmjh6kiwgbwycb35ory and 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://example.com
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for mention alongside hashtag 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    <a
      data-testid="post-mention"
      href="/profile/8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pk:8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
     loves 
    <a
      data-testid="post-hashtag"
      href="/search?tags=bitcoin"
    >
      #bitcoin
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for mention with markdown formatting 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <strong>
      bold
    </strong>
     with 
    <a
      data-testid="post-mention"
      href="/profile/8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pk:8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
     and 
    <em>
      italic
    </em>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for mention with text 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This post mentions 
    <a
      data-testid="post-mention"
      href="/profile/8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pk:8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
     in the middle
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for multiline content with line breaks 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    First line
Second line
Third line
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for multiple hashtags 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    <a
      data-testid="post-hashtag"
      href="/search?tags=one"
    >
      #one
    </a>
     
    <a
      data-testid="post-hashtag"
      href="/search?tags=two"
    >
      #two
    </a>
     
    <a
      data-testid="post-hashtag"
      href="/search?tags=three"
    >
      #three
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for multiple mentions 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    <a
      data-testid="post-mention"
      href="/profile/8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pk:8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
     and 
    <a
      data-testid="post-mention"
      href="/profile/7qinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pk:7qinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for nested blockquote 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <blockquote
    class="border-l-4 border-foreground pl-4 whitespace-normal"
  >
    

    <p>
      Level 1
    </p>
    

    <blockquote
      class="border-l-4 border-foreground pl-4 whitespace-normal"
    >
      

      <p>
        Level 2
      </p>
      

    </blockquote>
    

  </blockquote>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for non-truncated long content on post page 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Extra text to make this longer than 500 characters for truncation testing purposes.
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for ordered list 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <ol
    class="list-inside list-decimal whitespace-normal"
  >
    

    <li>
      First item
    </li>
    

    <li>
      Second item
    </li>
    

    <li>
      Third item
    </li>
    

  </ol>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for plain text 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Simple plain text content
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for single hashtag 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      data-testid="post-hashtag"
      href="/search?tags=bitcoin"
    >
      #bitcoin
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for single mention with pk: prefix 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      data-testid="post-mention"
      href="/profile/8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pk:8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for single mention with pubky prefix 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Check out 
    <a
      data-testid="post-mention"
      href="/profile/8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo"
    >
      pubky8pinxxgqs41n4aididenw5apqp1urfmzdztr8jt4abrkdn435ewo
    </a>
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for strikethrough and inline code combination 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <del>
      <code
        data-testid="post-code-block"
      >
        strikethrough and code
      </code>
    </del>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for strikethrough and italic combination 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <del>
      <em>
        strikethrough and italic
      </em>
    </del>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for strikethrough text 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    This is 
    <del>
      strikethrough
    </del>
     text
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for truncated content with Show more button 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse... 
  </p>
  <button
    aria-label="Show full post content"
    class="mt-4 cursor-pointer text-brand transition-colors hover:text-brand/80"
    data-override-defaults="true"
  >
    Show more
  </button>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for unordered list 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <ul
    class="list-inside list-disc whitespace-normal"
  >
    

    <li>
      Apple
    </li>
    

    <li>
      Banana
    </li>
    

    <li>
      Cherry
    </li>
    

  </ul>
</div>
`;

exports[`PostText - Snapshots > matches snapshot for www autolink 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Visit 
    <a
      class="cursor-pointer text-brand transition-colors hover:text-brand/80"
      href="http://www.example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      www.example.com
    </a>
     today
  </p>
</div>
`;

exports[`PostText - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground my-custom-class"
  data-override-defaults="true"
  data-testid="container"
>
  <p>
    Content with custom class
  </p>
</div>
`;
